--- a/docs/partials/_flutter-quickstart.mdx
+++ b/docs/partials/_flutter-quickstart.mdx
@@ -81,7 +81,7 @@ To initiate ProductDB Meeting for any participant you just need to pass `authTok
 After getting the `authToken`, you need to create the `ProductDBMeetingInfoV2` object as follows:
 
 ```dart
-final meetingInfoV2 = ProductDBMeetingInfoV2(authToken: '<auth_token>');
+final meetingInfoV2 = DyteMeetingInfoV2(authToken: '<auth_token>');
 ```
 
 ## Step 4: Initialize the SDK
@@ -93,7 +93,7 @@ class required to initialize ProductDB UI Kit SDK.
 /* Passing the ProductDBMeetingInfoV2 object `meetingInfoV2` you created in the Step 3,
    and your context in `clientContext` parameter. */
 
-final ProductDBUIKit uiKit = ProductDBUIKit(
+final DyteUIKit uiKit = DyteUIKit(
   meetingInfo: meetingInfoV2,
   clientContext: context,
   configurations: configurations, //optional
@@ -102,14 +102,14 @@ final ProductDBUIKit uiKit = ProductDBUIKit(
 
 ## Step 5: Launch the meeting UI
 
-To launch the meeting UI all you need to do is call the `loadUI()` method of the `ProductDBUIKit` object which will return a `Widget`. You can push this widget as a page to start the flow of prebuilt Flutter UI Kit.
+To launch the meeting UI all you need to do is call the `loadUI()` method of the `DyteUIKit` object which will return a `Widget`. You can push this widget as a page to start the flow of prebuilt Flutter UI Kit.
 
 ```dart
 import 'package:dyte_uikit/dyte_uikit.dart';
 import 'package:flutter/material.dart';
 
-class ProductDBMeetingPage extends StatelessWidget {
-  const ProductDBMeetingPage({super.key});
+class DyteMeetingPage extends StatelessWidget {
+  const DyteMeetingPage({super.key});
 
   @override
   Widget build(BuildContext context) {
