--- a/docs/partials/_ios-quickstart.mdx
+++ b/docs/partials/_ios-quickstart.mdx
@@ -28,7 +28,7 @@ and run a sample application from the
 
 1. Add the following line to your `Podfile`
 
-<CocoaPodInstallation pkg="ProductDBUiKit" path="9/b/8/ProductDBUiKit" />
+<CocoaPodInstallation pkg="DyteUiKit" path="9/b/8/DyteUiKit" />
 
 2. Install the client SDK as CocoaPods dependency
 
@@ -64,8 +64,8 @@ Try this in `viewDidAppear()`
 | `authToken` | After you've created the meeting, <br/> add each participant to the meeting <br/> using the [Add Participant API](/api?v=v2#/operations/add_participant)<br/> (The presetName created earlier <br/> must be passed in the body <br/> of the Add Participant API request) <br/> The API response contains the `authToken`. |
 
 ```swift
-import ProductDBUiKit
-import ProductDBiOSCore
+import DyteUiKit
+import DyteiOSCore
 
 class ViewController: UIViewController {
 
@@ -75,12 +75,12 @@ class ViewController: UIViewController {
 
     override func viewDidAppear(_ animated: Bool) {
         super.viewDidAppear(animated)
-        ProductDBUiKitEngine.setupV2(ProductDBMeetingInfoV2(authToken: authToken,
+        DyteUiKitEngine.setupV2(DyteMeetingInfoV2(authToken: authToken,
                                                 enableAudio: true,
                                                 enableVideo: true,
                                                 baseUrl: baseUrl))
 
-        let controller = ProductDBUiKitEngine.shared.getInitialController { [weak self] in
+        let controller = DyteUiKitEngine.shared.getInitialController { [weak self] in
             guard let self = self else {return}
             self.dismiss(animated: true)
         }
